--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 <body>
   <div class="grid">
     <header>
-      <div class="">
+      <div class="unit xs-1">
+        <h1>Moons of Mars</h1>
         <img class="img-flex" src="images/deimos.jpg" alt="">
       </div>
-      <div class="">
-        <h1>Moons of Mars</h1>
+      <div class="unit xs-1">
+        <h2>Deimos</h2>
         <p>Deimos is the smaller and outer of the two natural satellites of the planet Mars. With a mean radius of 6.2 km it takes 30.3 hours to orbit Mars.</p>
         <dl>
           <dt>Discovered by:</dt>
@@ -28,12 +29,10 @@
     </header>
   </div>
   <div class="grid">
-    <div class="">
-      <figure>
-        <img class="img-flex" src="images/phobos.jpg" alt="">
-      </figure>
+    <div class="unit xs-1">
+      <img class="img-flex" src="images/phobos.jpg" alt="">
     </div>
-    <div class="">
+    <div class="unit xs-1">
       <h2>Phobos</h2>
       <p>Phobos, Mars’s larger moon, is a small, irregularly shaped object with a mean radius of 11 km and is seven times more massive than the outer moon, Deimos.</p>
       <dl>
